--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>Simple Interest Calculator</title>
+    <title>Web App – Simple Interest Calculator</title>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -26,10 +26,11 @@
             <option value="10">10</option>
         </select> <br/>
 
-        <button onclick="compute()">Compute Interest</button>
+        <button onclick="compute()">Compute Interest</button><br/>
         <span id="result">
 
         </span>
+        <br/>
         <footer>
             &#169; This Calculator belongs to Wyatt Shafer
         </footer>
